<resources>
    <string name="app_name">Game Casin luck</string>
    <string name="bet">BET</string>
    <string name="_0">0</string>
    <string name="win">WIN</string>
    <string name="balance">BALANCE</string>
    <string name="big_win">Big Win!</string>
    <string name="big_win_coins">🎉 +%d Coins!</string>
    <string name="menu">Menu</string>
    <string name="buy_coins">Buy coins</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="volume_music">Volume Music</string>
    <string name="volume_of_other_sounds">Volume of other sounds</string>
    <string name="shop">Shop</string>
</resources>