<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/alert_dark_frame"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="35sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/volume_music"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekMusicVolume"
            android:layout_width="370dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/volume_of_other_sounds"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekSoundsVolume"
            android:layout_width="370dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btnMusicOnOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:padding="15dp"
            android:src="@drawable/round_music_off_44" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/btn_bg"
        android:src="@android:drawable/ic_delete" />

</FrameLayout>